--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -27,7 +27,8 @@ basicCN <- ggplot(davisdata,aes(y=alcohol,x=Seat))
 ```{r}
 basicCN + geom_boxplot()
 ```
-  
+
+Based off the boxplot the median of people who sit in the back as I see it is higher than both the third quantile of people who sit in the front and the third quantile those who sit in the middle.  
   
 ### get fancy  
 
