--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -47,6 +47,11 @@ summary.aov(model1)
 
 After running the Inferential test we find that the probability of the people in the front and middle consuming the same amount of alcohol as the people in the back being 0.00116. Therefore there is a significant difference between the 3.
 
+```{r}
+plot(TukeyHSD(model1))
+```
+
+When looking at the model we see 
 
 ## Conclusions
 
