--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -55,4 +55,4 @@ When looking at the model we see that the middle compared to the back does not h
 
 ## Conclusions
 
-
+When going through the process with more than two variables there are more steps that we have to go through which can complicate the process. In this assignment we used ggplot tp create out boxplot which showed us the median of how man drinks were consumed per section. Then we ran a numerical summary of the information so that we could get exact numbers and see how big the difference was. Then we ran the inferential test to get the probability of these three sections consuming the same amount of alcohol which was 0.000116. After this we used a comparison model that showed us how significant the difference between each section was. I have came to the conclusion that their is a significant difference between how much alcohol the three sections consumed 
